--- a/aws-eks/kube/deploy.yaml
+++ b/aws-eks/kube/deploy.yaml
@@ -1,3 +1,38 @@
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: mage-user
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  namespace: default
+  name: job-manager
+rules:
+- apiGroups: [""] # "" indicates the core API group
+  resources: ["pods"]
+  verbs: ["get", "list", "watch"]
+- apiGroups: ["batch", "extensions"]
+  resources: ["jobs", "jobs/status"]
+  verbs: ["create", "delete", "get"]
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: mage-job-manager
+  namespace: default
+subjects:
+- kind: ServiceAccount
+  name: mage-user # Name of the ServiceAccount
+  namespace: default
+roleRef:
+  kind: Role # This must be Role or ClusterRole
+  name: job-manager # This must match the name of the Role or ClusterRole you wish to bind to
+  apiGroup: rbac.authorization.k8s.io
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -25,3 +60,4 @@ spec:
         - name: efs
           persistentVolumeClaim:
             claimName: efs-storage-claim
+      serviceAccountName: mage-user
