--- a/aws-eks/kube/deploy.yaml
+++ b/aws-eks/kube/deploy.yaml
@@ -54,10 +54,15 @@ spec:
           ports:
             - containerPort: 6789
           volumeMounts:
-          - name: efs
+          - name: mage-fs
             mountPath: "/home/src"
+          env:
+            - name: KUBE_NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
       volumes:
-        - name: efs
+        - name: mage-fs
           persistentVolumeClaim:
             claimName: efs-storage-claim
       serviceAccountName: mage-user
