--- a/atlantis.yaml
+++ b/atlantis.yaml
@@ -21,5 +21,5 @@ workflows:
           extra_args: ["-var-file=mage-prod.tfvars"]
     state_rm:
       steps:
-      - state rm:
+      - state_rm:
           extra_args: ["-lock=false"]
